// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty property set 1`] = `
<div
  className="property-set form-row"
/>
`;

exports[`numbersTest 1`] = `
<div
  className="property-set form-row"
>
  <div
    className="col-lg-12"
  >
    <div
      className="form-group property required"
    >
      <label
        className="form-control-label"
        htmlFor="shortField"
      >
        Short
      </label>
      <div
        className="controls"
      >
        <input
          className="form-control"
          disabled={undefined}
          id="shortPropertyInput"
          max={32767}
          min={-32768}
          onChange={[Function]}
          placeholder={undefined}
          required={true}
          step={1}
          type="number"
          value="32767"
        />
      </div>
    </div>
  </div>
  <div
    className="col-lg-12"
  >
    <div
      className="form-group property required"
    >
      <label
        className="form-control-label"
        htmlFor="integerField"
      >
        Integer
      </label>
      <div
        className="controls"
      >
        <input
          className="form-control"
          disabled={undefined}
          id="integerPropertyInput"
          max={2147483647}
          min={-2147483648}
          onChange={[Function]}
          placeholder={undefined}
          required={true}
          step={1}
          type="number"
          value="2147483647"
        />
      </div>
    </div>
  </div>
  <div
    className="col-lg-12"
  >
    <div
      className="form-group property required"
    >
      <label
        className="form-control-label"
        htmlFor="longField"
      >
        Long
      </label>
      <div
        className="controls"
      >
        <input
          className="form-control"
          disabled={undefined}
          id="longPropertyInput"
          max={9223372036854775000}
          min={-9223372036854775000}
          onChange={[Function]}
          placeholder={undefined}
          required={true}
          step={1}
          type="number"
          value="9223372036854775009"
        />
        <span
          className="form-control-feedback"
        >
          the numbers are rounded off 3 last digits of java Long.MAX_VALUE
        </span>
      </div>
    </div>
  </div>
  <div
    className="col-lg-12"
  >
    <div
      className="form-group property required"
    >
      <label
        className="form-control-label"
        htmlFor="doubleField"
      >
        Double
      </label>
      <div
        className="controls"
      >
        <input
          className="form-control"
          disabled={undefined}
          id="doublePropertyInput"
          onChange={[Function]}
          placeholder={undefined}
          required={true}
          type="number"
          value="100.5"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders without crashing 1`] = `
<div
  className="property-set form-row"
>
  <div
    className="col-lg-12"
  >
    <div
      className="form-group property required"
    >
      <label
        className="form-control-label"
        htmlFor="textInputField"
      >
        Text input
      </label>
      <div
        className="controls"
      >
        <input
          className="form-control"
          disabled={undefined}
          id="textInputPropertyInput"
          onChange={[Function]}
          placeholder={undefined}
          required={true}
          type="text"
          value="test"
        />
      </div>
    </div>
  </div>
  <div
    className="col-lg-12"
  >
    <div
      className="form-group property required"
    >
      <label
        className="form-control-label"
        htmlFor="dateField"
      >
        Date
      </label>
      <div
        className="controls"
      >
        <div
          className="rdt"
        >
          <input
            className="form-control"
            disabled={undefined}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            required={true}
            type="text"
            value="20.07.2017"
          />
          <div
            className="rdtPicker"
          >
            <div
              className="rdtDays"
            >
              <table>
                <thead>
                  <tr>
                    <th
                      className="rdtPrev"
                      onClick={[Function]}
                    >
                      <span>
                        ‹
                      </span>
                    </th>
                    <th
                      className="rdtSwitch"
                      colSpan={5}
                      data-value={6}
                      onClick={[Function]}
                    >
                      July 2017
                    </th>
                    <th
                      className="rdtNext"
                      onClick={[Function]}
                    >
                      <span>
                        ›
                      </span>
                    </th>
                  </tr>
                  <tr>
                    <th
                      className="dow"
                    >
                      Su
                    </th>
                    <th
                      className="dow"
                    >
                      Mo
                    </th>
                    <th
                      className="dow"
                    >
                      Tu
                    </th>
                    <th
                      className="dow"
                    >
                      We
                    </th>
                    <th
                      className="dow"
                    >
                      Th
                    </th>
                    <th
                      className="dow"
                    >
                      Fr
                    </th>
                    <th
                      className="dow"
                    >
                      Sa
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td
                      className="rdtDay rdtOld"
                      data-value={25}
                      onClick={[Function]}
                    >
                      25
                    </td>
                    <td
                      className="rdtDay rdtOld"
                      data-value={26}
                      onClick={[Function]}
                    >
                      26
                    </td>
                    <td
                      className="rdtDay rdtOld"
                      data-value={27}
                      onClick={[Function]}
                    >
                      27
                    </td>
                    <td
                      className="rdtDay rdtOld"
                      data-value={28}
                      onClick={[Function]}
                    >
                      28
                    </td>
                    <td
                      className="rdtDay rdtOld"
                      data-value={29}
                      onClick={[Function]}
                    >
                      29
                    </td>
                    <td
                      className="rdtDay rdtOld"
                      data-value={30}
                      onClick={[Function]}
                    >
                      30
                    </td>
                    <td
                      className="rdtDay"
                      data-value={1}
                      onClick={[Function]}
                    >
                      1
                    </td>
                  </tr>
                  <tr>
                    <td
                      className="rdtDay"
                      data-value={2}
                      onClick={[Function]}
                    >
                      2
                    </td>
                    <td
                      className="rdtDay"
                      data-value={3}
                      onClick={[Function]}
                    >
                      3
                    </td>
                    <td
                      className="rdtDay"
                      data-value={4}
                      onClick={[Function]}
                    >
                      4
                    </td>
                    <td
                      className="rdtDay"
                      data-value={5}
                      onClick={[Function]}
                    >
                      5
                    </td>
                    <td
                      className="rdtDay"
                      data-value={6}
                      onClick={[Function]}
                    >
                      6
                    </td>
                    <td
                      className="rdtDay"
                      data-value={7}
                      onClick={[Function]}
                    >
                      7
                    </td>
                    <td
                      className="rdtDay"
                      data-value={8}
                      onClick={[Function]}
                    >
                      8
                    </td>
                  </tr>
                  <tr>
                    <td
                      className="rdtDay"
                      data-value={9}
                      onClick={[Function]}
                    >
                      9
                    </td>
                    <td
                      className="rdtDay"
                      data-value={10}
                      onClick={[Function]}
                    >
                      10
                    </td>
                    <td
                      className="rdtDay"
                      data-value={11}
                      onClick={[Function]}
                    >
                      11
                    </td>
                    <td
                      className="rdtDay"
                      data-value={12}
                      onClick={[Function]}
                    >
                      12
                    </td>
                    <td
                      className="rdtDay"
                      data-value={13}
                      onClick={[Function]}
                    >
                      13
                    </td>
                    <td
                      className="rdtDay"
                      data-value={14}
                      onClick={[Function]}
                    >
                      14
                    </td>
                    <td
                      className="rdtDay"
                      data-value={15}
                      onClick={[Function]}
                    >
                      15
                    </td>
                  </tr>
                  <tr>
                    <td
                      className="rdtDay"
                      data-value={16}
                      onClick={[Function]}
                    >
                      16
                    </td>
                    <td
                      className="rdtDay"
                      data-value={17}
                      onClick={[Function]}
                    >
                      17
                    </td>
                    <td
                      className="rdtDay"
                      data-value={18}
                      onClick={[Function]}
                    >
                      18
                    </td>
                    <td
                      className="rdtDay"
                      data-value={19}
                      onClick={[Function]}
                    >
                      19
                    </td>
                    <td
                      className="rdtDay rdtActive"
                      data-value={20}
                      onClick={[Function]}
                    >
                      20
                    </td>
                    <td
                      className="rdtDay"
                      data-value={21}
                      onClick={[Function]}
                    >
                      21
                    </td>
                    <td
                      className="rdtDay"
                      data-value={22}
                      onClick={[Function]}
                    >
                      22
                    </td>
                  </tr>
                  <tr>
                    <td
                      className="rdtDay"
                      data-value={23}
                      onClick={[Function]}
                    >
                      23
                    </td>
                    <td
                      className="rdtDay"
                      data-value={24}
                      onClick={[Function]}
                    >
                      24
                    </td>
                    <td
                      className="rdtDay"
                      data-value={25}
                      onClick={[Function]}
                    >
                      25
                    </td>
                    <td
                      className="rdtDay"
                      data-value={26}
                      onClick={[Function]}
                    >
                      26
                    </td>
                    <td
                      className="rdtDay"
                      data-value={27}
                      onClick={[Function]}
                    >
                      27
                    </td>
                    <td
                      className="rdtDay"
                      data-value={28}
                      onClick={[Function]}
                    >
                      28
                    </td>
                    <td
                      className="rdtDay"
                      data-value={29}
                      onClick={[Function]}
                    >
                      29
                    </td>
                  </tr>
                  <tr>
                    <td
                      className="rdtDay"
                      data-value={30}
                      onClick={[Function]}
                    >
                      30
                    </td>
                    <td
                      className="rdtDay"
                      data-value={31}
                      onClick={[Function]}
                    >
                      31
                    </td>
                    <td
                      className="rdtDay rdtNew"
                      data-value={1}
                      onClick={[Function]}
                    >
                      1
                    </td>
                    <td
                      className="rdtDay rdtNew"
                      data-value={2}
                      onClick={[Function]}
                    >
                      2
                    </td>
                    <td
                      className="rdtDay rdtNew"
                      data-value={3}
                      onClick={[Function]}
                    >
                      3
                    </td>
                    <td
                      className="rdtDay rdtNew"
                      data-value={4}
                      onClick={[Function]}
                    >
                      4
                    </td>
                    <td
                      className="rdtDay rdtNew"
                      data-value={5}
                      onClick={[Function]}
                    >
                      5
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="col-lg-12"
  >
    <div
      className="form-group property required"
    >
      <label
        className="form-control-label"
        htmlFor="maskField"
      >
        Mask
      </label>
      <div
        className="controls"
      >
        <input
          className="form-control"
          disabled={undefined}
          id="maskPropertyInput"
          mask="11111"
          maxLength={5}
          onChange={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onPaste={[Function]}
          placeholder="_____"
          required={true}
          size={5}
          value="123__"
        />
      </div>
    </div>
  </div>
  <div
    className="col-lg-12"
  >
    <div
      className="form-group property required"
    >
      <label
        className="form-control-label"
        htmlFor="textAreaField"
      >
        TextArea
      </label>
      <div
        className="controls"
      >
        <textarea
          className="form-control"
          cols={undefined}
          disabled={undefined}
          id="textAreaPropertyInput"
          onChange={[Function]}
          placeholder="field for text"
          required={true}
          rows={3}
          value="test"
        />
      </div>
    </div>
  </div>
  <div
    className="col-lg-12"
  >
    <div
      className="form-group property required"
    >
      <label
        className="form-control-label"
        htmlFor="WYSIWYGField"
      >
        WYSIWYG
      </label>
      <div
        className="controls"
      >
        <div
          className="p10"
        />
      </div>
    </div>
  </div>
  <div
    className="col-lg-12"
  >
    <div
      className="form-group property required"
    >
      <label
        className="form-control-label"
        htmlFor="passwordField"
      >
        Password
      </label>
      <div
        className="controls"
      >
        <input
          className="form-control"
          disabled={undefined}
          id="passwordPropertyInput"
          onChange={[Function]}
          placeholder={undefined}
          required={true}
          type="password"
          value="password"
        />
      </div>
    </div>
  </div>
  <div
    className="col-lg-12"
  >
    <div
      className="form-group property required"
    >
      <label
        className="form-control-label"
        htmlFor="fileField"
      >
        File
      </label>
      <div
        className="controls"
      >
        <input
          className="form-control-file"
          disabled={undefined}
          id="filePropertyInput"
          multiple={undefined}
          onChange={[Function]}
          required={true}
          type="file"
        />
      </div>
    </div>
  </div>
  <div
    className="col-lg-12"
  >
    <div
      className="form-group property required"
    >
      <label
        className="form-control-label"
        htmlFor="selectField"
      >
        Select
      </label>
      <div
        className="controls"
      >
        <div
          className="Select has-value is-clearable is-searchable Select--single"
          style={undefined}
        >
          <input
            disabled={false}
            name="selectPropertyInput"
            type="hidden"
            value="vanilla"
          />
          <div
            className="Select-control"
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={undefined}
          >
            <span
              className="Select-multi-value-wrapper"
              id="react-select-5--value"
            >
              <div
                className="Select-value"
                style={undefined}
                title={undefined}
              >
                <span
                  aria-selected="true"
                  className="Select-value-label"
                  id="react-select-5--value-item"
                  role="option"
                >
                  Vanilla
                </span>
              </div>
              <div
                className="Select-input"
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <input
                  aria-activedescendant="react-select-5--value"
                  aria-describedby={undefined}
                  aria-expanded="false"
                  aria-haspopup="false"
                  aria-label={undefined}
                  aria-labelledby={undefined}
                  aria-owns=""
                  className={undefined}
                  id={undefined}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  required={false}
                  role="combobox"
                  style={
                    Object {
                      "boxSizing": "content-box",
                      "width": "5px",
                    }
                  }
                  tabIndex={undefined}
                  value=""
                />
                <div
                  style={
                    Object {
                      "height": 0,
                      "left": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "top": 0,
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                >
                  
                </div>
              </div>
            </span>
            <span
              aria-label="Clear value"
              className="Select-clear-zone"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              title="Clear value"
            >
              <span
                className="Select-clear"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&times;",
                  }
                }
              />
            </span>
            <span
              className="Select-arrow-zone"
              onMouseDown={[Function]}
            >
              <span
                className="Select-arrow"
                onMouseDown={[Function]}
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="col-lg-12"
  >
    <div
      className="form-group property required"
    >
      <label
        className="form-control-label"
        htmlFor="virtualizedSelectField"
      >
        VirtualizedSelect
      </label>
      <div
        className="controls"
      >
        <div
          className="Select has-value is-clearable is-searchable Select--single"
          style={undefined}
        >
          <input
            disabled={false}
            name="virtualizedSelectPropertyInput"
            type="hidden"
            value="vanilla"
          />
          <div
            className="Select-control"
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={undefined}
          >
            <span
              className="Select-multi-value-wrapper"
              id="react-select-6--value"
            >
              <div
                className="Select-value"
                style={undefined}
                title={undefined}
              >
                <span
                  aria-selected="true"
                  className="Select-value-label"
                  id="react-select-6--value-item"
                  role="option"
                >
                  Vanilla
                </span>
              </div>
              <div
                className="Select-input"
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <input
                  aria-activedescendant="react-select-6--value"
                  aria-describedby={undefined}
                  aria-expanded="false"
                  aria-haspopup="false"
                  aria-label={undefined}
                  aria-labelledby={undefined}
                  aria-owns=""
                  className={undefined}
                  id={undefined}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  required={false}
                  role="combobox"
                  style={
                    Object {
                      "boxSizing": "content-box",
                      "width": "5px",
                    }
                  }
                  tabIndex={undefined}
                  value=""
                />
                <div
                  style={
                    Object {
                      "height": 0,
                      "left": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "top": 0,
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                >
                  
                </div>
              </div>
            </span>
            <span
              aria-label="Clear value"
              className="Select-clear-zone"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              title="Clear value"
            >
              <span
                className="Select-clear"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&times;",
                  }
                }
              />
            </span>
            <span
              className="Select-arrow-zone"
              onMouseDown={[Function]}
            >
              <span
                className="Select-arrow"
                onMouseDown={[Function]}
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="col-lg-12"
  >
    <div
      className="form-group property required"
    >
      <label
        className="form-control-label"
        htmlFor="multiSelectField"
      >
        Multi Select
      </label>
      <div
        className="controls"
      >
        <div
          className="Select has-value is-clearable is-searchable Select--multi"
          style={undefined}
        >
          <input
            disabled={false}
            name="multiSelectPropertyInput"
            type="hidden"
            value="chocolate"
          />
          <input
            disabled={false}
            name="multiSelectPropertyInput"
            type="hidden"
            value="strawberry"
          />
          <div
            className="Select-control"
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={undefined}
          >
            <span
              className="Select-multi-value-wrapper"
              id="react-select-7--value"
            >
              <div
                className="Select-value"
                style={undefined}
                title={undefined}
              >
                <span
                  aria-hidden="true"
                  className="Select-value-icon"
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                >
                  ×
                </span>
                <span
                  aria-selected="true"
                  className="Select-value-label"
                  id="react-select-7--value-0"
                  role="option"
                >
                  Chocolate
                  <span
                    className="Select-aria-only"
                  >
                     
                  </span>
                </span>
              </div>
              <div
                className="Select-value"
                style={undefined}
                title={undefined}
              >
                <span
                  aria-hidden="true"
                  className="Select-value-icon"
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                >
                  ×
                </span>
                <span
                  aria-selected="true"
                  className="Select-value-label"
                  id="react-select-7--value-1"
                  role="option"
                >
                  Strawberry
                  <span
                    className="Select-aria-only"
                  >
                     
                  </span>
                </span>
              </div>
              <div
                className="Select-input"
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <input
                  aria-activedescendant="react-select-7--value"
                  aria-describedby={undefined}
                  aria-expanded="false"
                  aria-haspopup="false"
                  aria-label={undefined}
                  aria-labelledby={undefined}
                  aria-owns=""
                  className={undefined}
                  id={undefined}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  required={false}
                  role="combobox"
                  style={
                    Object {
                      "boxSizing": "content-box",
                      "width": "5px",
                    }
                  }
                  tabIndex={undefined}
                  value=""
                />
                <div
                  style={
                    Object {
                      "height": 0,
                      "left": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "top": 0,
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                >
                  
                </div>
              </div>
            </span>
            <span
              aria-label="Clear all"
              className="Select-clear-zone"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              title="Clear all"
            >
              <span
                className="Select-clear"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&times;",
                  }
                }
              />
            </span>
            <span
              className="Select-arrow-zone"
              onMouseDown={[Function]}
            >
              <span
                className="Select-arrow"
                onMouseDown={[Function]}
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="col-lg-12"
  >
    <div
      className="form-check property required"
    >
      <input
        checked={true}
        className="form-check-input"
        disabled={undefined}
        id="checkBoxPropertyInput"
        onChange={[Function]}
        required={true}
        type="checkbox"
      />
      <label
        className="form-check-label"
        htmlFor="checkBoxField"
      >
        CheckBox
      </label>
    </div>
  </div>
  <div
    className="form-group property property-label col-lg-12"
  >
    <div
      className="form-control-label"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Pellentesque habitant morbi tristique senectus et netus et <a href=\\"#test\\">Link</a> malesuada fames ac <b>turpis</b> egestas.</p>",
        }
      }
      id="labelFieldRawPropertyInput"
    />
  </div>
  <div
    className="form-group property property-label col-lg-12"
  >
    <label
      className="form-control-label"
      id="labelFieldPropertyInput"
    >
      Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
    </label>
  </div>
</div>
`;

exports[`simple property set 1`] = `
<div
  className="property-set form-row"
>
  <div
    className="col-lg-12"
  >
    <div
      className="form-group property required"
    >
      <label
        className="form-control-label"
        htmlFor="numberField"
      >
        numberField
      </label>
      <div
        className="controls"
      >
        <input
          className="form-control"
          disabled={undefined}
          id="numberPropertyInput"
          onChange={[Function]}
          placeholder={undefined}
          required={true}
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`test outer 1`] = `
<div
  className="property-set form-row"
>
  <div
    className="property-group col-12"
  >
    <div
      className="row property-group__line"
    />
    <div
      className="property-groop-box"
    >
      <h4
        className="property-group__title"
      >
        Group 1
      </h4>
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <div
            className="form-row"
          >
            <div
              className="col-lg-12"
            >
              <div
                className="form-group property required"
              >
                <label
                  className="form-control-label"
                  htmlFor="textInputField"
                >
                  Name
                </label>
                <div
                  className="controls"
                >
                  <input
                    className="form-control"
                    disabled={undefined}
                    id="textInputPropertyInput"
                    onChange={[Function]}
                    placeholder={undefined}
                    required={true}
                    type="text"
                    value="test"
                  />
                </div>
              </div>
            </div>
            <div
              className="col-lg-12"
            >
              <div
                className="form-check property required"
              >
                <input
                  checked={true}
                  className="form-check-input"
                  disabled={undefined}
                  id="checkBoxPropertyInput"
                  onChange={[Function]}
                  required={true}
                  type="checkbox"
                />
                <label
                  className="form-check-label"
                  htmlFor="checkBoxField"
                >
                  CheckBox
                </label>
              </div>
            </div>
            <div
              className="form-group property property-label col-lg-12"
            >
              <label
                className="form-control-label"
                id="labelFieldPropertyInput"
              >
                Pellentesque habitant morbi tristique senectus...
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="property-group col-12"
  >
    <div
      className="row property-group__line"
    />
    <div
      className="property-groop-box"
    >
      <h4
        className="property-group__title"
      >
        Group 2 - Error
      </h4>
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <div
            className="form-row"
          >
            <div
              className="col-lg-12"
            >
              <div
                className="form-group property has-error required"
              >
                <label
                  className="form-control-label"
                  htmlFor="textInput2Field"
                >
                  Name
                </label>
                <div
                  className="controls"
                >
                  <input
                    className="form-control"
                    disabled={undefined}
                    id="textInput2PropertyInput"
                    onChange={[Function]}
                    placeholder={undefined}
                    required={true}
                    type="text"
                    value="test"
                  />
                  <span
                    className="form-control-feedback"
                  >
                    Error here
                  </span>
                </div>
              </div>
            </div>
            <div
              className="col-lg-12"
            >
              <div
                className="form-check property has-error required"
              >
                <input
                  checked={false}
                  className="form-check-input"
                  disabled={undefined}
                  id="checkBox2PropertyInput"
                  onChange={[Function]}
                  required={true}
                  type="checkbox"
                />
                <label
                  className="form-check-label"
                  htmlFor="checkBox2Field"
                >
                  CheckBox
                </label>
                <span
                  className="form-control-feedback"
                >
                  You must check before submitting.
                </span>
              </div>
            </div>
            <div
              className="form-group property property-label col-lg-12 has-error"
            >
              <label
                className="form-control-label"
                id="labelField2PropertyInput"
              >
                Pellentesque habitant morbi tristique senectus...
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="property-group col-12"
  >
    <div
      className="row property-group__line"
    />
    <div
      className="property-groop-box"
    >
      <h4
        className="property-group__title"
      >
        Group 3 - Success
      </h4>
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <div
            className="form-row"
          >
            <div
              className="col-lg-12"
            >
              <div
                className="form-group property has-success required"
              >
                <label
                  className="form-control-label"
                  htmlFor="textInput3Field"
                >
                  Name
                </label>
                <div
                  className="controls"
                >
                  <input
                    className="form-control"
                    disabled={undefined}
                    id="textInput3PropertyInput"
                    onChange={[Function]}
                    placeholder={undefined}
                    required={true}
                    type="text"
                    value="test"
                  />
                  <span
                    className="form-control-feedback"
                  >
                    Ok here
                  </span>
                </div>
              </div>
            </div>
            <div
              className="col-lg-12"
            >
              <div
                className="form-check property has-success required"
              >
                <input
                  checked={true}
                  className="form-check-input"
                  disabled={undefined}
                  id="checkBox3PropertyInput"
                  onChange={[Function]}
                  required={true}
                  type="checkbox"
                />
                <label
                  className="form-check-label"
                  htmlFor="checkBox3Field"
                >
                  CheckBox
                </label>
                <span
                  className="form-control-feedback"
                >
                  Ok here
                </span>
              </div>
            </div>
            <div
              className="form-group property property-label col-lg-12 has-success"
            >
              <label
                className="form-control-label"
                id="labelField3PropertyInput"
              >
                Pellentesque habitant morbi tristique senectus...
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="property-group col-12"
  >
    <div
      className="row property-group__line"
    />
    <div
      className="property-groop-box"
    >
      <h4
        className="property-group__title"
      >
        Group 4 - CanBeNull
      </h4>
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <div
            className="form-row"
          >
            <div
              className="col-lg-12"
            >
              <div
                className="form-group property"
              >
                <label
                  className="form-control-label"
                  htmlFor="textInput4Field"
                >
                  Name
                </label>
                <div
                  className="controls"
                >
                  <input
                    className="form-control"
                    disabled={undefined}
                    id="textInput4PropertyInput"
                    onChange={[Function]}
                    placeholder={undefined}
                    required={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="property-group col-12"
  >
    <div
      className="row property-group__line"
    />
    <div
      className="property-groop-box"
    >
      <h4
        className="property-group__title"
      >
        Group 5 - use cssClasses
      </h4>
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <div
            className="form-row"
          >
            <div
              className="col-lg-6"
            >
              <div
                className="form-group property required"
              >
                <label
                  className="form-control-label"
                  htmlFor="nameField"
                >
                  Name
                </label>
                <div
                  className="controls"
                >
                  <input
                    className="form-control"
                    disabled={undefined}
                    id="namePropertyInput"
                    onChange={[Function]}
                    placeholder={undefined}
                    required={true}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              className="col-lg-6"
            >
              <div
                className="form-group property required"
              >
                <label
                  className="form-control-label"
                  htmlFor="subjectField"
                >
                  Subject
                </label>
                <div
                  className="controls"
                >
                  <input
                    className="form-control"
                    disabled={undefined}
                    id="subjectPropertyInput"
                    onChange={[Function]}
                    placeholder={undefined}
                    required={true}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
